--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -327,7 +327,8 @@
     "patreon_message": "This site is 100% free and powered by the community.<br>If VTES Decks helps you, consider supporting me on Patreon ❤️",
     "patreon_supporter_message": "Thank you for supporting VTES Decks!<br>Your support keeps VTES Decks alive ❤️",
     "contact_support": "Contact Support",
-    "whats_new": "What's new {{ date }}"
+    "whats_new": "What's new {{ date }}",
+    "metagame": "Current Metagame"
   },
   "import_amaranth": {
     "title": "Import Amaranth",
