feat: enhance deck archetype modal with improved localization and UI updates

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -900,6 +900,7 @@
     "deckId": "Deck ID",
     "icon": "Icon",
     "description": "Description",
+    "enabled": "Enabled",
     "decks_with_archetype": "Discover decks",
     "meta": "Meta <strong>{{percentage}}%</strong> ({{count}} decks)",
     "delete_title": "Delete this archetype?",
