--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -898,6 +898,7 @@
     "deckId": "ID del Mazo",
     "icon": "Icono",
     "description": "Descripción",
+    "enabled": "Habilitado",
     "decks_with_archetype": "Descubrir mazos",
     "meta": "Meta <strong>{{percentage}}%</strong> ({{count}} mazos)",
     "delete_title": "¿Eliminar este arquetipo?",
