--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -890,6 +890,7 @@
   },
   "deck_archetype": {
     "title": "Metajuego Arquetipos",
+    "tooltip": "Los datos del metajuego se basan en torneos de los últimos 180 días (ajustable). Los mazos se agrupan por arquetipo. Solo se incluyen arquetipos con al menos dos victorias en eventos de 20+ jugadores, y que tengan una victoria en torneo de 50+ jugadores o cuatro victorias en total.",
     "create": "Crear",
     "edit": "Editar",
     "delete": "Eliminar",
