--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -890,6 +890,7 @@
   },
   "deck_archetype": {
     "title": "Metajogo de Arquétipos",
+    "tooltip": "Os dados do metagame são baseados em torneios dos últimos 180 dias (ajustável). Os decks são agrupados por arquetipo. Apenas arquetipos com pelo menos duas vitórias em eventos com 20+ jogadores são incluídos, e devem ter uma vitória em torneio com 50+ jogadores ou quatro vitórias no total.",
     "create": "Criar",
     "edit": "Editar",
     "delete": "Excluir",
