feat: add suggestion retrieval for deck archetypes and enhance UI with preview links

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -899,6 +899,7 @@
     "name": "Name",
     "type": "Type",
     "deckId": "Deck ID",
+    "preview": "Preview",
     "icon": "Icon",
     "description": "Description",
     "enabled": "Enabled",
