--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -897,6 +897,7 @@
     "name": "Nombre",
     "type": "Tipo",
     "deckId": "ID del Mazo",
+    "preview": "Vista previa",
     "icon": "Icono",
     "description": "Descripción",
     "enabled": "Habilitado",
