--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -897,6 +897,7 @@
     "name": "Nome",
     "type": "Tipo",
     "deckId": "ID do Baralho",
+    "preview": "Visualizar",
     "icon": "Ícone",
     "description": "Descrição",
     "enabled": "Ativado",
