--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -892,7 +892,7 @@
   },
   "deck_archetype": {
     "title": "Metagame Archetypes",
-    "tooltip": "Metagame data is based on tournament results from the last 180 days (adjustable). Decks are grouped by archetype. Only archetypes with at least two wins in 20+ player tournaments are included, and they must either have one win in a 50+ player tournament or four total wins.",
+    "tooltip": "Metagame data is based on tournament results from the last 1 year (adjustable). Decks are grouped by archetype. Only archetypes with at least two wins in 20+ player tournaments are included, and they must either have one win in a 50+ player tournament or four total wins.",
     "create": "Create",
     "edit": "Edit",
     "delete": "Delete",
@@ -907,11 +907,12 @@
     "meta": "Meta <strong>{{percentage}}%</strong> ({{count}} decks)",
     "delete_title": "Delete this archetype?",
     "delete_message": "Archetype will be deleted. This action cannot be undone.",
-    "show_from_last": "Show archetypes from the last",
+    "show_from_last": "Show the metagame from",
     "meta_type": {
-      "90_days": "90 Days",
-      "180_days": "180 Days",
-      "365_days": "365 Days",
+      "90_days": "90 days ago",
+      "180_days": "180 days ago",
+      "365_days": "1 year ago",
+      "730_days": "2 years ago",
       "all_time": "All-time"
     }
   }
