--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -283,6 +283,12 @@
   "header": {
     "home": "Inicio",
     "decks": "Mazos",
+    "all_decks": "Todos los Mazos",
+    "metagame_decks": "Mazos Metajuego",
+    "tournament_decks": "Mazos de Torneo",
+    "community_decks": "Mazos de Comunidad",
+    "preconstructed_decks": "Mazos Preconstruidos",
+    "cards": "Cartas",
     "crypt": "Cripta",
     "library": "Biblioteca",
     "builder": "Editor",
@@ -294,8 +300,8 @@
     "sign_up": "Registrarse",
     "statistics": "Estadísticas",
     "my_collection": "Mi Colección",
-    "my_decks": "Mis mazos",
-    "bookmarks": "Favoritos",
+    "my_decks": "Mis Mazos",
+    "bookmarks": "Mis Favoritos",
     "public_profile": "Perfil Público",
     "profile_settings": "Configuración de Perfil",
     "logout": "Cerrar sesión",
@@ -308,6 +314,7 @@
   "home": {
     "welcome_title": "Bienvenido a VTES Decks",
     "welcome_subtitle": "Descubre, Comparte y Crea los mejores mazos de Vampire: The Eternal Struggle",
+    "metagame_decks": "Mazos de Metajuego",
     "tournament_decks": "Mazos de Torneo",
     "community_decks": "Mazos de Comunidad",
     "preconstructed_decks": "Mazos Preconstruidos",
@@ -889,7 +896,7 @@
     "day_login": "Iniciar sesión para comenzar"
   },
   "deck_archetype": {
-    "title": "Metajuego Arquetipos",
+    "title": "Mazos Metajuego",
     "tooltip": "Los datos del metajuego se basan en torneos de los último año (ajustable). Los mazos se agrupan por arquetipo. Solo se incluyen arquetipos con al menos dos victorias en eventos de 20+ jugadores, y que tengan una victoria en torneo de 50+ jugadores o cuatro victorias en total.",
     "create": "Crear",
     "edit": "Editar",
