--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -895,7 +895,7 @@
     "day_start": "Iniciar Desafio",
     "day_login": "Conectar para Iniciar"
   },
-  "deck_archetype": {
+  "deck_metagame": {
     "title": "Metajogo Baralhos",
     "tooltip": "Os dados do metagame são baseados em torneios dos último ano (ajustável). Os decks são agrupados por arquetipo. Apenas arquetipos com pelo menos duas vitórias em eventos com 20+ jogadores são incluídos, e devem ter uma vitória em torneio com 50+ jogadores ou quatro vitórias no total.",
     "create": "Criar",
@@ -908,7 +908,7 @@
     "icon": "Ícone",
     "description": "Descrição",
     "enabled": "Ativado",
-    "decks_with_archetype": "Descobrir baralhos",
+    "decks_with_metagame": "Descobrir baralhos",
     "meta": "Meta <strong>{{percentage}}%</strong> ({{count}} baralhos)",
     "delete_title": "Excluir este arquétipo?",
     "delete_message": "O arquétipo será excluído. Esta ação não pode ser desfeita.",
