feat: add change history section in card modal and update translations for changes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -173,6 +173,7 @@
     "banned": "Banned",
     "unreleased": "Unreleased",
     "rulings": "Rulings",
+    "changes": "Change History",
     "no_rulings": "No rulings available",
     "sets": "Sets",
     "artist": "Artist",
