--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -173,6 +173,7 @@
     "banned": "Prohibida",
     "unreleased": "No lanzada",
     "rulings": "Reglas",
+    "changes": "Historial de Cambios",
     "no_rulings": "No hay reglas disponibles",
     "sets": "Expansión",
     "artist": "Artista",
