--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -173,6 +173,7 @@
     "banned": "Banida",
     "unreleased": "Não lançada",
     "rulings": "Regras",
+    "changes": "Histórico de Mudanças",
     "no_rulings": "Nenhuma regra disponível",
     "sets": "Expansões",
     "artist": "Artista",
